# mugo

./: .gitmodules  CMakeLists.txt  Makefile  README.md  boot.s  link.ld  long_mode_init.s  main.c  multiboot.s
arch/amd64/: config  link.ld
arch/amd64/boot/: .#boot.s  boot.s  multiboot.s
arch/i686/: CMakeLists.txt  config  early.c  idt.c  idt.h  init.c  interrupt.c  kcall.asm  kcall.asm.S  link.ld  link_dbg.ld  paging_utils.c  sysenter.asm  thread.c  thread_asm.asm
arch/i686/boot/: boot.asm  gdt.c  gdt.h  interrupt.asm  interrupt.s  load_tables.s  multiboot.s
arch/i686/drivers/: pic.c  timer.c  vga.c
arch/i686/include/: arch_conf.h  arch_crt.h  arch_elf.h  arch_exec.h  arch_interrupt.h  arch_obj_defs.h  arch_paging.h  arch_thread.h  arch_types_base.h
arch/riscv/: link.ld
arch/x86/: config  early.c  idt.c  idt.h  init.c  interrupt.c  link.ld  link.ld.pre  paging.s  paging_utils.c  panic.c  regs.h  trace.s  util.c  util.h
arch/x86/boot/: boot.s  gdt.c  gdt.h  interrupt.s  load_gdt.s  load_tables.s  multiboot.s  paging.s
arch/x86/drivers/: pic.c  pic.h  timer.c  timer.h  vga.c
arch/x86/include/: arch_interrupt.h  arch_obj_defs.h  arch_paging.h  arch_panic.h  arch_types_base.h  arch_util.h  interrupt.h  types.h
include/: console.h  exec.h  meminfo.h  print.h  stdlib.h  string.h  time.h  va_args.h  vga.h
include/arch/: info.h  interrupt.h  multiboot.h  objs.h  paging.h  panic.h  thread.h  time.h  util.h
include/sys/: cdefs.h  elf.h  elf_32.h  elf_base.h  elf_ctx.h  mem_cb.h  syscall.h
include/types/: base.h  mem.h  time.h
iso/boot/grub/: grub.cfg
kern/: assert.h  conf.h  crt.c  early.c  kcall.c  kcall.h  kmalloc.c  kmalloc.h  kmem.c  kmem.h  kobjs.h  kprint.c  kprint.h  list.h  log.h  main.c  proc.c  proc.h  sched.c  sched.h  sched_rr.c  sys.c  sys.h  time.c  time.h  util.c  util.h
kern/mem/: phys_alloc.c  phys_alloc.h  stack_alloc.c
lib/: printf.c  stdlib.c  string.c
lib/crt/: crt.c
lib/libelf/: elf.c
lib/stdlib/: stdlib.c
lib/sys/: syscall.c
serv/: Makefile
serv/mman/: CMakeLists.txt  Makefile  link.ld  main.c
sys/arch/i686/: CMakeLists.txt  kcall_stub.asm  syscall.c
